[gd_scene load_steps=80 format=2]

[ext_resource path="res://tim.png" type="Texture" id=1]
[ext_resource path="res://parallax_mountain_pack/layers/parallax-mountain-bg.png" type="Texture" id=2]
[ext_resource path="res://parallax_mountain_pack/layers/parallax-mountain-montain-far.png" type="Texture" id=3]
[ext_resource path="res://parallax_mountain_pack/layers/parallax-mountain-foreground-trees.png" type="Texture" id=4]
[ext_resource path="res://parallax_mountain_pack/layers/parallax-mountain-trees.png" type="Texture" id=5]
[ext_resource path="res://parallax_mountain_pack/layers/parallax-mountain-mountains.png" type="Texture" id=6]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=7]
[ext_resource path="res://black.png" type="Texture" id=8]
[ext_resource path="res://tim.gd" type="Script" id=9]
[ext_resource path="res://party.wav" type="AudioStream" id=10]
[ext_resource path="res://connor (1).png" type="Texture" id=11]
[ext_resource path="res://daniel.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 12, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 24, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 36, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 60, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 72, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 12, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 24, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 36, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 48, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 60, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 72, 64, 12, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 21.0
} ]

[sub_resource type="GDScript" id=23]
script/source = "extends Sprite


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 12 )
region = Rect2( 12, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 12 )
region = Rect2( 24, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 12 )
region = Rect2( 36, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 12 )
region = Rect2( 48, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 12 )
region = Rect2( 60, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 12 )
region = Rect2( 72, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 12 )
region = Rect2( 0, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 12 )
region = Rect2( 12, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 24, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 12 )
region = Rect2( 36, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 12 )
region = Rect2( 48, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 12 )
region = Rect2( 60, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 12 )
region = Rect2( 72, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 12 )
region = Rect2( 0, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 12 )
region = Rect2( 12, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 12 )
region = Rect2( 24, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 12 )
region = Rect2( 36, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 12 )
region = Rect2( 48, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 12 )
region = Rect2( 60, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 12 )
region = Rect2( 72, 64, 12, 32 )

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "default",
"speed": 21.0
} ]

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 11 )
region = Rect2( 12, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 11 )
region = Rect2( 24, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 11 )
region = Rect2( 36, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 11 )
region = Rect2( 60, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 11 )
region = Rect2( 72, 0, 12, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 11 )
region = Rect2( 0, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 11 )
region = Rect2( 12, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 11 )
region = Rect2( 24, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 11 )
region = Rect2( 36, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 11 )
region = Rect2( 48, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 11 )
region = Rect2( 60, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 11 )
region = Rect2( 72, 32, 12, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 11 )
region = Rect2( 0, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 11 )
region = Rect2( 12, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 11 )
region = Rect2( 24, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 11 )
region = Rect2( 36, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 11 )
region = Rect2( 48, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 11 )
region = Rect2( 60, 64, 12, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 11 )
region = Rect2( 72, 64, 12, 32 )

[sub_resource type="SpriteFrames" id=67]
animations = [ {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "default",
"speed": 21.0
} ]

[node name="World" type="Node2D"]
position = Vector2( 61, 32 )
script = ExtResource( 9 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 441.982, 503.696 )
scale = Vector2( 3.99292, 3.99293 )
frames = SubResource( 22 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 7 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 118.499, 79.3523 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2( -118.828, -79.3524 )
scale = Vector2( 3.77586, 3.75106 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 515.815, 296.908 )
scale = Vector2( 3.75669, 3.73634 )
texture = ExtResource( 3 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 10, 1 )
motion_mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 511.271, 301.408 )
scale = Vector2( 1.87702, 3.74763 )
texture = ExtResource( 6 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 40, 1 )
motion_mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 509.525, 301.941 )
scale = Vector2( 1.89269, 3.73634 )
texture = ExtResource( 5 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 80, 1 )
motion_mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 509.525, 298.167 )
scale = Vector2( 1.88344, 3.78352 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 446.953, 259.716 )
scale = Vector2( 1.07895, 1.12751 )
z_index = 1
z_as_relative = false
texture = ExtResource( 8 )
script = SubResource( 23 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 339.969, 498.701 )
scale = Vector2( 4.37271, 4.37271 )
frames = SubResource( 45 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 539.869, 499.924 )
scale = Vector2( 4.25419, 4.25419 )
frames = SubResource( 67 )
